# Buildnis

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Buildnis.code-workspace  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  buildnis.py  make_package.bat  make_package.sh  pyproject.toml  run_local_linters.bat  run_local_linters.sh  run_test.bat  setup.cfg  test_install.bat  test_install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  create_pip.yml  flake8.yml  linux.yml  linux_test.yml  osx.yml  osx_test.yml  pycodestyle.yml  pydocstyle.yml  pyflakes.yml  windows.yml  windows_test.yml
buildnis/: __main__.py
buildnis/config/: OS_ARCH_COMPILER_BUILDTYPE.json  module_config.json
buildnis/configure_scripts/: template.bat
buildnis/doc/: Makefile  make.bat
buildnis/modules/: __init__.py  main.py
config/: OS_ARCH_COMPILER_BUILDTYPE.json  module_config.json  project_config.json  project_dependency_config.json
configure_scripts/: template.sh
configure_scripts/Linux/: amd.sh  clang.sh  gcc.sh  intel.sh  java.sh  nvidia.sh  python.sh  python38.sh  python39.sh
configure_scripts/OSX/: clang.sh  intel.sh  pythonint.sh  sphinx.sh
configure_scripts/Windows/: Intel.bat  JavaVM.bat  VisualStudio.bat  doxygenDoc.bat  pythonInt.bat  sphinx.bat
modules/: __init__.py  main.py
modules/config/: __init__.py  build_config.py  check.py  config.py  config_dir_json.py  host.py  (+4 more)
test_project/: .clang-format  project_config.json  project_dependency_config.json  test_project.py
tests/: __init__.py  conftest.py  test_main.py  test_project.py
(+79 files in other folders)
