[metadata]
name = example-pkg-Release-Candidate-Username
#attr: modules.VERSION
version = 0.0.1  
author = Release Candidate
author_email = rec@gmx.at
description = Test package
keywords = build
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/Release-Candidate/Buildnis
project_urls =
    Bug Tracker = https://github.com/Release-Candidate/Buildnis/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License    
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Intended Audience :: Developers
    Environment :: Console
    Development Status :: 3 - Alpha


[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    buildnis = modules:main